--- a/DirProblem/index.html
+++ b/DirProblem/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+		<link rel="stylesheet" href="style.css" />
 		<style>
 			body {
 				font-family: "Times New Roman", Georgia, Serif;
@@ -102,11 +103,19 @@
 		  
 		<!-- End page content -->
 		</div>
+		
+		<button class="change-lang">
+			Change
+		</button>
 
 		<!-- Footer -->
 		<footer class="w3-center w3-light-grey w3-padding-32">
 		  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 		</footer>
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+		
+		<script src="script.js"></script>
 
 	</body>
 	
